force-app/main/default/objects/SchedulingManagement__c/SchedulingManagement__c.object-meta.xml
<CustomObject>
    <label>Gerenciamento de agendamento</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>SchedulingManagement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gerenciamentos de agendamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>