force-app/main/default/objects/SchedulingManagement__c/fields/ActionStatus__c.field-meta.xml
<CustomField>
    <fullName>ActionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status da ação</label>
    <type>Checkbox</type>
</CustomField>