force-app/main/default/objects/SchedulingManagement__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Nome do banco relacionado a ser usado na na criação da tarefa.</description>
    <label>Banco relacionado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>