force-app/main/default/objects/SchedulingManagement__c/fields/CancelationDate__c.field-meta.xml
<CustomField>
    <fullName>CancelationDate__c</fullName>
    <label>Data de Cancelamento</label>
    <type>DateTime</type>
</CustomField>