force-app/main/default/objects/SchedulingManagement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Gerenciamentos de agendamento</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>