force-app/main/default/objects/SchedulingManagement__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Gerenciamentos de agendamento</relationshipLabel>
    <relationshipName>Gerenciamentos_de_agendamento</relationshipName>
    <type>Lookup</type>
</CustomField>