force-app/main/default/objects/SchedulingManagement__c/fields/FlowType__c.field-meta.xml
<CustomField>
    <fullName>FlowType__c</fullName>
    <label>Tipo do fluxo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlowType</valueSetName>
    </valueSet>
</CustomField>