force-app/main/default/objects/SchedulingManagement__c/fields/HourOfScheduling__c.field-meta.xml
<CustomField>
    <fullName>HourOfScheduling__c</fullName>
    <formula>MID(TEXT( CreatedDate ), 12, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de agendamento</label>
    <type>Text</type>
</CustomField>