force-app/main/default/objects/SchedulingManagement__c/fields/NumberOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAttempts__c</fullName>
    <label>Número de Tentativas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>