force-app/main/default/objects/SchedulingManagement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gerenciamentos de agendamento</relationshipLabel>
    <relationshipName>Gerenciamentos_de_agendamento</relationshipName>
    <type>Lookup</type>
</CustomField>