force-app/main/default/objects/SchedulingManagement__c/fields/SchedulingDate__c.field-meta.xml
<CustomField>
    <fullName>SchedulingDate__c</fullName>
    <label>Data de agendamento</label>
    <type>DateTime</type>
</CustomField>