force-app/main/default/objects/SchedulingManagement__c/fields/SObjectDefinition__c.field-meta.xml
<CustomField>
    <fullName>SObjectDefinition__c</fullName>
    <label>Definição do objeto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SObjectDefinition</valueSetName>
    </valueSet>
</CustomField>