force-app/main/default/objects/SchedulingManagement__c/fields/SourceTask__c.field-meta.xml
<CustomField>
    <fullName>SourceTask__c</fullName>
    <label>Tarefa Relacionada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>