force-app/main/default/objects/SchedulingManagement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Completo</label>
            </value>
            <value>
                <fullName>Finished w/action</fullName>
                <isActive>false</isActive>
                <label>Finished w/action</label>
            </value>
            <value>
                <fullName>Finished wo/action</fullName>
                <isActive>false</isActive>
                <label>Finished wo/action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>