force-app/main/default/objects/SchedulingManagement__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <formula>TEXT(TaskAction__r.TaskType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarefa</label>
    <type>Text</type>
</CustomField>