force-app/main/default/objects/SchedulingManagement__c/fields/TaskAction__c.field-meta.xml
<CustomField>
    <fullName>TaskAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ação da tarefa</label>
    <referenceTo>TaskAction__c</referenceTo>
    <relationshipLabel>Gerenciamentos de agendamento</relationshipLabel>
    <relationshipName>TaskAction</relationshipName>
    <type>Lookup</type>
</CustomField>