force-app/main/default/objects/SchedulingManagement__c/fields/TaskManagement__c.field-meta.xml
<CustomField>
    <fullName>TaskManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerenciamento de tarefas</label>
    <referenceTo>TaskManagement__c</referenceTo>
    <relationshipLabel>Gerenciamentos de agendamento</relationshipLabel>
    <relationshipName>TaskManagement</relationshipName>
    <type>Lookup</type>
</CustomField>