force-app/main/default/objects/SchedulingManagement__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <formula>TEXT(TaskManagement__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da tarefa</label>
    <type>Text</type>
</CustomField>